--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo Testing...",
+    "test:ci": "echo Testing..."
   },
   "dependencies": {
     "@types/node": "18.16.3",
