changed incremental value

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "composite": true,
-    "incremental": false
+    "incremental": true
   },
   "exclude": ["packages/**/tests/**", "packages/**/dist/**"],
   "references": [
