--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -39,7 +39,8 @@
     "typescript": "5.0.4"
   },
   "dependencies": {
-    "@prisma/client": "4.13.0"
+    "@prisma/client": "4.13.0",
+    "@pito/types": "workspace:*"
   },
   "prisma": {
     "schema": "./src/prisma/schema.prisma",
