--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -2,5 +2,6 @@
   "compilerOptions": {
     "outDir": "./dist"
   },
-  "extends": "../../tsconfig.base.json",
+  "include": ["src/**/*.ts"],
+  "extends": "../../tsconfig.base.json"
 }
